taedium -> mysentria except comments and such
democracy basically means government by the people, of the people, for the people.
but the people....

--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -77,13 +77,13 @@
  pamkusean_new_home: "New Home"
  pamkusean_new_home_desc: "When our homeland fell we needed to find a new place for our people, but these lands were very different from our homes. We started to cultivate our culture and religion to make it more familiar."
  pamkusean_society_of_thinkers: "Society of Thinkers"
- pamkusean_society_of_thinkers_desc: "As a nation that was subjugated by Taedian Eneratian Empire and Kakigian Zakarturi Empire we got to see philosophies of both societies. Now our thinkers are versatile in different schools of thoughts."
+ pamkusean_society_of_thinkers_desc: "As a nation that was subjugated by Mysentrian Eneratian Empire and Kakigian Zakarturi Empire we got to see philosophies of both societies. Now our thinkers are versatile in different schools of thoughts."
  pamkusean_cannon_military: "Cannon Military"
  pamkusean_cannon_military_desc: "Thunderous sound and rain of round shots from our bombards make even the bravest soldiers and generals scared of our military might. We will invest into them more so no one can't conquer as again."
  pamkusean_solidify_control: "Solidify Control"
  pamkusean_solidify_control_desc: "Because we needed to create our states from scratch we discovered new ways to govern these lands. It allows us to have greater control of our lands."
- pamkusean_taedian_border: "Taedian Border"
- pamkusean_taedian_border_desc: "Settling here means that we now control important land trade routes from Taedium to Kakigia. We can use that to benefit us."
+ pamkusean_taedian_border: "Mysentrian Border"
+ pamkusean_taedian_border_desc: "Settling here means that we now control important land trade routes from Mysentria to Kakigia. We can use that to benefit us."
  pamkusean_eternal_march: "Eternal March"
  pamkusean_eternal_march_desc: "We were recruited to fight in far lands of Zakarturi Empire and Eneratian Empire. When these empires collapsed many people had hopes that we will be able to enjoy our lives in peace, but after Visparayan invasion we are still far from our homelands, forced to march until we do our duty."
  pamkusean_national_liberation: "National Liberation"
