--- a/localisation/TD_01_flavour_ansgarland_l_english.yml
+++ b/localisation/TD_01_flavour_ansgarland_l_english.yml
@@ -9,7 +9,7 @@
  ansgarland_imperial_mercenaries: "Imperial Mercenaries"
  ansgarland_imperial_mercenaries_desc: "Being a soldier-for-hire in the imperial lands, full of banditry, internal conflicts and plague, is a very fruitful career. Even geoberic nations often had to employ them to preserve our own manpower. Foreign mercenaries ofter brought with them new military insight, not only to our leaders but also our troops."
  ansgarland_schafhirten: "Schafhirten"
- ansgarland_schafhirten_desc: "Shepherds of Oddelean Range provide the highest quality wool in this part of the world. When the new world cotton started to dominate in the rest of Taedium, our wool was still as popular as ever."
+ ansgarland_schafhirten_desc: "Shepherds of Oddelean Range provide the highest quality wool in this part of the world. When the new world cotton started to dominate in the rest of Mysentria, our wool was still as popular as ever."
  ansgarland_konigsgarde: "Königsgarde"
  ansgarland_konigsgarde_desc: "Originaly, Königsgarde was used to refer to the guards of the Ansgarlander kings. As the armies started to move from levies to standing soldiers, the army of Ansgarland started to be called Königsgarde, because it was seen as a force only loyal to the king."
  ansgarland_absolute_authority: "Absolute Authority"
