--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -29,7 +29,7 @@
  group_march_ideas_start: "Marcan Traditions"
  group_march_ideas_bonus: "Marcan Ambition"
  idea_war_of_the_faithful: "War of the Faithful"
- idea_war_of_the_faithful_desc: "Religious fervor in the acerbic borderlands is the most intense in the entire taedian continent. Many pious warriors come here to for glory and to pursue the pious path of war. For the security of the saelian faith, we must destroy our enemies in the west."
+ idea_war_of_the_faithful_desc: "Religious fervor in the acerbic borderlands is the most intense in the entire Mysentrian continent. Many pious warriors come here to for glory and to pursue the pious path of war. For the security of the saelian faith, we must destroy our enemies in the west."
  idea_modernized_fortifications: "Modern Fortifications"
  idea_modernized_fortifications_desc: "Fallen nusabates of Rifanadan and Zibarat have left us a great gift - good fortification. After we came here the only problem was their state of disrepair, but with the development of the art of war they became obsolete. Thanks to the ingenuity of our engineers, they can serve the nation once again."
  idea_land_grants: "Land Grants"
