--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -34,7 +34,7 @@
  dorchia_channel_trade: "Channel Trade"
  dorchia_channel_trade_desc: "Trade in Dorchean Isles is almost a neccesity. Dorchean States traded between themselves for centuries and, since relations with argenia started to get better, with Ethelnothdun and Anginneowu."
  dorchia_imperial_relations: "Imperial Relations"
- dorchia_imperial_relations_desc: "During Argenian raids on the Saelian Empire, the Emperor reached out to kings of Dorchia. And so, the Dorchean-Imperial alliance was born, based on mutual enemy of Argenia. This opened Dorchean states to the rest of the taedian world, which later helped us join the Saelian Church."
+ dorchia_imperial_relations_desc: "During Argenian raids on the Saelian Empire, the Emperor reached out to kings of Dorchia. And so, the Dorchean-Imperial alliance was born, based on mutual enemy of Argenia. This opened Dorchean states to the rest of the Mysentrian world, which later helped us join the Saelian Church."
 
  his_authority: "Authority"
  his_authority_desc: "We will live under our ruler, just as humanity lives under Saletiarn."
