--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -19,7 +19,7 @@
  camaria_fattoria_nobiliare: "Fattoria Nobiliare"
  camaria_fattoria_nobiliare_desc: "With low number of nobles in our lands they hold massive arable fields. With their cooperation with local peasants it allows to coordinate massive farms that can produce more than fragmented estates"
  camaria_new_era_of_trade: "New Era of Trade"
- camaria_new_era_of_trade_desc: "Previously Ehrenstaat and their trade league dominated trade on entire continent. But with slow formation of our own merchant class and high production of goods we were able to become a center of trade in Taedium."
+ camaria_new_era_of_trade_desc: "Previously Ehrenstaat and their trade league dominated trade on entire continent. But with slow formation of our own merchant class and high production of goods we were able to become a center of trade in Mysentria."
  camaria_nationalistic_fervor: "Nationalistic Fervor"
  camaria_nationalistic_fervor_desc: "Saelian Empire from the north, Chilverchia from the east and various sailors from west-south. These all influences tried to take control of our lands and use our hands and resources to help their goals. But we, people of Camaria will stand together against all aggressors!"
 
