--- a/localisation/TD_01_flavour_chilverchia_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchia_l_english.yml
@@ -5,11 +5,11 @@
  group_chilverchian_ideas_bonus: "Chilverchian Minor Ambition"
 
  chilverchia_renowned_military: "Renowned Military"
- chilverchia_renowned_military_desc: "Our armies are one of the most known in entire Taedium. Their arrival on the battlefield can turn the tide of the battle or guarantee total success against our opponents."
+ chilverchia_renowned_military_desc: "Our armies are one of the most known in entire Mysentria. Their arrival on the battlefield can turn the tide of the battle or guarantee total success against our opponents."
  chilverchia_eneratian_inquisition: "Eneratian Inquisition"
  chilverchia_eneratian_inquisition_desc: "When Eneratian Empire came to be a lot of different clergymen wanted to use this occasion to spread their own schisms. To combat these activities inqusition was founded. Their ability to maintain true Eneratian faith is incredible."
  chilverchia_robust_diplomatic_corps: "Robust Diplomatic Corps"
- chilverchia_robust_diplomatic_corps_desc: "To maintain prestige of our state and monarch we needed to expand our diplomatic efforts. Recruiting more diplomats and providing them with the best education that our nation can provide makes us a diplomatic power of Taedium."
+ chilverchia_robust_diplomatic_corps_desc: "To maintain prestige of our state and monarch we needed to expand our diplomatic efforts. Recruiting more diplomats and providing them with the best education that our nation can provide makes us a diplomatic power of Mysentria."
  chilverchia_modern_taxing_policy: "Modern Taxing Policy"
  chilverchia_modern_taxing_policy_desc: "One of most important source of income for every state is taxation. If we tax too little we will have problems with our treasury, if we tax too much our peasants will live in poverty. Because of that we implemented new system that will tax everyone depending on their class and wealth."
  chilverchia_war_poets: "War Poets"
