--- a/localisation/TD_01_flavour_colonial_l_english.yml
+++ b/localisation/TD_01_flavour_colonial_l_english.yml
@@ -51,12 +51,12 @@
  TD_new_world_colonial.8.a: "Import Higher quality wood from different provinces"
  TD_new_world_colonial.8.b: "They will have to make it through with what they have"
 
- TD_new_world_colonial.9.t: "Taedium-borne Crops don't adapt in New World"
- TD_new_world_colonial.9.desc: "Often, when the farmers travel to the new world for the first time, they want to bring crops from their homeland which are familiar to them in taste and in methods of cultivation. Often this is harmless, but once in a while colonists have to deal with infertile soils and climate unfitting for taedian crops."
+ TD_new_world_colonial.9.t: "Mysentria-borne Crops don't adapt in New World"
+ TD_new_world_colonial.9.desc: "Often, when the farmers travel to the new world for the first time, they want to bring crops from their homeland which are familiar to them in taste and in methods of cultivation. Often this is harmless, but once in a while colonists have to deal with infertile soils and climate unfitting for Mysentrian crops."
  TD_new_world_colonial.9.a: "Arrange supplies to affected colonies"
  TD_new_world_colonial.9.b: "They have to survive on their own"
  TD_infertile_soils: "Infertile Soils"
- desc_TD_infertile_soils: "Soil in this province isn't suitable enough for taedian crops."
+ desc_TD_infertile_soils: "Soil in this province isn't suitable enough for Mysentrian crops."
 
  TD_new_world_colonial.10.t: "Birth of a New Colonial City"
  TD_new_world_colonial.10.desc: "One of our new world settlements has been growing rapidly in the recent times. Whether it was from our efforts, preexisting native infrastructure, favorable environment or simply luck, its importance as a regional hub is unquestionable. This bustling city is attracting more and more old world settlers and serves as a shining example of our colonial successes. We must invest in it even further."
