--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -201,7 +201,7 @@
 
 
  td_ehren_saelianism.15.t: "Our Response"
- td_ehren_saelianism.15.desc: "Reformation is raging through entire Taedium, we can't stay passive in this situation. We need to announce our official stance on this. Sigilianists want us to denounce Reformationists and help Sigilian church, Moderates are ready to reach a compromise Liemarian movement and see this situation as a way to spread our ideas beyond borders. Ehrenists are feeling neutral towards Liemarians and prefer to just propagate faith inside our state."
+ td_ehren_saelianism.15.desc: "Reformation is raging through entire Mysentria, we can't stay passive in this situation. We need to announce our official stance on this. Sigilianists want us to denounce Reformationists and help Sigilian church, Moderates are ready to reach a compromise Liemarian movement and see this situation as a way to spread our ideas beyond borders. Ehrenists are feeling neutral towards Liemarians and prefer to just propagate faith inside our state."
  td_ehren_saelianism.15.a: "Defend our Sigilian brothers"
  td_ehren_saelianism.15.b: "Join reformation"
  td_ehren_saelianism.15.c: "Cultivate our faith"
