--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -9,7 +9,7 @@
  ehrenstaat_confederated_shipyards: "Confederated Shipyards"
  ehrenstaat_confederated_shipyards_desc: "Our shipyards are united in one organisation that is coordinating their work in our entire sphere. It is detached from Ehren poltics and bureaucracy allowing it to work with full potential."
  ehrenstaat_centre_of_the_north: "Centre of the North"
- ehrenstaat_centre_of_the_north_desc: "Control over the straits and creation of our trade league allowed us to divert trade from the entire taedian continent straight into our lands."
+ ehrenstaat_centre_of_the_north_desc: "Control over the straits and creation of our trade league allowed us to divert trade from the entire Mysentrian continent straight into our lands."
  ehrenstaat_league_of_manufacturers: "League of Manufacturers"
  ehrenstaat_league_of_manufacturers_desc: "Manufacturers and traders in Ehrenstaat are cooperating allowing us to optimise and supply production in our sphere. There are always resources ready to fuel Ehren economy."
  ehrenstaat_republikanische_garde: "Republikanische Garde"
@@ -84,7 +84,7 @@
  ## Events
 
  td_ehrenstaat.1.t: "Storm on the Horizon"
- td_ehrenstaat.1.desc: "Ehrenstaat previously was a confederation of different citystates that controlled trade on entire northern side of Taedian continent. With slow centralisation of Ehren cities into one state and its trade sphere expansion nobody thought that this reality would shatter. But with rapid creation of trade leagues in Saelian Empire, Ehren profits started to disappear and its nation to crumble.\n\nCivil war that was caused by nobility allowed everyone to partition Ehren trade holdings outside of its sphere. They wanted to abolish merchant rule over the republic and create their own state. When nobles were crushed by merchant forces Ehrenstaat still couldn't maintain any power over other nations.\n\nIt all comes to newest rule of Grand Consul Diedrich Schumacher that was supported by old noble communities and expansionist politicians. He decided that conquest of Nifthem will allow this nation to rebuild old glory of this nation. But some people started to question his methods when he started to centralise entire power in his hands.\n\nWe will see where it all goes."
+ td_ehrenstaat.1.desc: "Ehrenstaat previously was a confederation of different citystates that controlled trade on entire northern side of Mysentrian continent. With slow centralisation of Ehren cities into one state and its trade sphere expansion nobody thought that this reality would shatter. But with rapid creation of trade leagues in Saelian Empire, Ehren profits started to disappear and its nation to crumble.\n\nCivil war that was caused by nobility allowed everyone to partition Ehren trade holdings outside of its sphere. They wanted to abolish merchant rule over the republic and create their own state. When nobles were crushed by merchant forces Ehrenstaat still couldn't maintain any power over other nations.\n\nIt all comes to newest rule of Grand Consul Diedrich Schumacher that was supported by old noble communities and expansionist politicians. He decided that conquest of Nifthem will allow this nation to rebuild old glory of this nation. But some people started to question his methods when he started to centralise entire power in his hands.\n\nWe will see where it all goes."
  td_ehrenstaat.1.a: "God Save Ehrenstaat"
 
  td_ehrenstaat.2.t: "War for Nifthem"
