--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -84,7 +84,7 @@
  niewebehatland_ideas_bonus: "Niewebehatian Ambition"
  niewebehatland_ideas_start: "Niewebehatian Traditions"
  niewebehatland_steppe_trade: "Steppe Trade"
- niewebehatland_steppe_trade_desc: "Our position on the western shore of Kakigia allows us to control the flow of trade from Pemenia to Taedium. In order to not discourage foreign traders, we have to ensure that the goods can travel safely along protected routes, undisturbed by the Amagari."
+ niewebehatland_steppe_trade_desc: "Our position on the western shore of Kakigia allows us to control the flow of trade from Pemenia to Mysentria. In order to not discourage foreign traders, we have to ensure that the goods can travel safely along protected routes, undisturbed by the Amagari."
  niewebehatland_new_geniburgh_military_academy: "New Geniburgh Academy"
  niewebehatland_new_geniburgh_military_academy_desc: "Due to gradual demilitarization of our nation, many leaders found themselves in an alien environment where they couldn't plunder they way to prosperity. Many of them settled in rural parts of the country and became nobles, but some decided to live in the capital city and establish a military academy to pass their knowledge to younger generations."
  niewebehatland_colonisation_of_the_steppe: "Colonisation of the Steppe"
