--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -96,10 +96,10 @@
  harmonized_yermic: "Harmonized Yermic"
  desc_harmonized_yermic: "We have succesfully harmonized with Yermisc"
 
- merhaan.1004.t: "Harmonization of Samadio-Taedian Faiths"
- merhaan.1004.desc: "Our shamans found out that not everyone living in Taedium believes in authority of Saelius. These faiths were fading away because of mass convertions to Saelianism. Integrating them into our church made us preserve these local faiths and document their knowledge that is unique for them."
+ merhaan.1004.t: "Harmonization of Samadio-Mysentrian Faiths"
+ merhaan.1004.desc: "Our shamans found out that not everyone living in Mysentria believes in authority of Saelius. These faiths were fading away because of mass convertions to Saelianism. Integrating them into our church made us preserve these local faiths and document their knowledge that is unique for them."
  merhaan.1004.a: "Closer to truth"
- harmonized_samadio_taedian: "Harmonized Samadio-Taedian"
+ harmonized_samadio_taedian: "Harmonized Samadio-Mysentrian"
  desc_harmonized_samadio_taedian: "We have succesfully harmonized with Samadio-Taedians"
 
  merhaan.1005.t: "Harmonization of Anhativaz Faiths"
