--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -74,8 +74,8 @@
  minor_nifthemi_war_is_business: "War is Business"
  minor_nifthemi_war_is_business_desc: "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
 
- minor_nifthemi_beyond_taedium: "Beyond Taedium"
- minor_nifthemi_beyond_taedium_desc: "Nifthemi fleets will explore beyond Taedium so we can find new civilizations to trade with."
+ minor_nifthemi_beyond_mysentria: "Beyond Mysentria"
+ minor_nifthemi_beyond_mysentria_desc: "Nifthemi fleets will explore beyond Mysentria so we can find new civilizations to trade with."
  
  minor_nifthemi_colonial_spirit: "Colonial Spirit"
  minor_nifthemi_colonial_spirit_desc: "We found new lands that are empty and free to claim! Our population now wants to continue our exploration and start colonisation of these lands."
@@ -117,5 +117,5 @@
  united_nifthemi_modern_state_desc: "Government must be constantly reformed and maintained for it to be useful to all citizens."
 
  united_nifthemi_northern_armada: "Northern Armada"
- united_nifthemi_northern_armada_desc: "One thing where Ehrenians were right is need of a big fleet to maintain influence in Northern Taedium. So we will invest into our new armada that will control the seas."
+ united_nifthemi_northern_armada_desc: "One thing where Ehrenians were right is need of a big fleet to maintain influence in Northern Mysentria. So we will invest into our new armada that will control the seas."
  
