--- a/localisation/TD_01_flavour_novoregno_l_english.yml
+++ b/localisation/TD_01_flavour_novoregno_l_english.yml
@@ -44,7 +44,7 @@
  novoregno_the_new_reign: "The New Reign"
  novoregno_the_new_reign_desc: "For most of its turbulent history Aqerb was divided between various small state fighting for survival, always under a threat of war. With narbonese conquests and our independence at least some of these lands were united and now are safely protected by our kind rulers."
  novoregno_reformed_pistoleros: "Reformed Pistoleros"
- novoregno_reformed_pistoleros_desc: "Early adoption of firearms proved to be a great success which was an important factor in winning the independence war. Many taedian states quickly embraced pistoleros to gain advantage over their enemies and even us, but while they only knew how to copy, we started to improve the model making it much more efficient."
+ novoregno_reformed_pistoleros_desc: "Early adoption of firearms proved to be a great success which was an important factor in winning the independence war. Many Mysentrian states quickly embraced pistoleros to gain advantage over their enemies and even us, but while they only knew how to copy, we started to improve the model making it much more efficient."
  novoregno_venatian_ventures: "Venatian Ventures"
  novoregno_venatian_ventures_desc: "Our efforts to establish permanent settlements in Qarabil Maior has striked the interest of many ambitious investors willing to support growing colonies. Even some of the poorer citizens were swayed thanks to land hand-outs in the new world, many with the hopes of escaping poverty."
  novoregno_agellidian_dream: "Agellidian Dream"
