--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -5,7 +5,7 @@
  tummic_forest_folk: "Forest Folk"
  tummic_forest_folk_desc: "Living in a land of cold winters and harsh forests gives us a unique advantage against enemies in this type of terrain. The strategy is to let the enemy tire themselves out looking for our armies and strike when the opportunity arises."
  tummic_fur_trade: "Fur Trade"
- tummic_fur_trade_desc: "Fur is a valuable resource. Not only it makes for a warm coat, but also looks 'cool as hell'. And who if not tummic people are its biggest supply to Taedium."
+ tummic_fur_trade_desc: "Fur is a valuable resource. Not only it makes for a warm coat, but also looks 'cool as hell'. And who if not tummic people are its biggest supply to Mysentria."
  tummic_sointuva: "Sointuva"
  tummic_sointuva_desc: "In the core of tummic identity lies the ancient faith of Sointuva, centered around eternal fight of good and evil."
  tummic_tutkimusmatkailija: "Tutkimusmatkailija"
@@ -15,7 +15,7 @@
  tummic_royal_council: "Royal Council"
  tummic_royal_council_desc: "The council is the second most important institution in the nation beside the royal family. They not only support the ruler, but help him administer his land. Members are often low nobles, judges, important merchants and sometimes even rich peasants."
  tummic_taedianization: "Taedianization"
- tummic_taedianization_desc: "To not fall behind our neighbours, we must take inspiration from more advanced, taedian societies across the sea. Thanks to ehrenic influence this may come easier than expected."
+ tummic_taedianization_desc: "To not fall behind our neighbours, we must take inspiration from more advanced, Mysentrian societies across the sea. Thanks to ehrenic influence this may come easier than expected."
 
  
  tummland_ideas: "Tummic Ideas"
@@ -30,7 +30,7 @@
  idea_fur_traders_desc: "For most of Tummic history our goods were sold by the Ehren traders, making them our only window to the greated world. Now that we can finally have full economic freedom, our merchants travel around the world selling finest furs and supplies. Fur trade became so important to our economy that a whole new subgroup emerged among the trading guilds called turkiskauppiaat, literally translating to fur merchants. They quickly grew powerful in the country often even overshadowing some nobles."
  idea_syvametsa_frontier_desc: "Free people of the deep forest persistently defended their land against the colonization and bussiness ventures, even as far as settling into our land. The need for large amounts of fur and valuable mining resources caused the Tummic state to invest into exploring and colonizing the deep forest at the beginning of the XVII century. Despite the opposition from most of the locals, few of them actually integrated into our society fairly well, providing much needed manpower."
  idea_grand_fleet: "Grand Fleet"
- idea_grand_fleet_desc: "There are only two ways to reach Tummland from Taedium - either go through the entirety of Kakigia or use the fleet. After securing the land connections, it was necessary to also maintain a large fleet able to fight off potential enemies wanting to threaten us. In 1526, even before the official unification, the Grand Arsenal of Kaitatie was rebuilt in order to prepare for the construction of our Grand Fleet."
+ idea_grand_fleet_desc: "There are only two ways to reach Tummland from Mysentria - either go through the entirety of Kakigia or use the fleet. After securing the land connections, it was necessary to also maintain a large fleet able to fight off potential enemies wanting to threaten us. In 1526, even before the official unification, the Grand Arsenal of Kaitatie was rebuilt in order to prepare for the construction of our Grand Fleet."
  idea_koskematon_maa: "Koskematon Maa"
  idea_koskematon_maa_desc: "In order to more effectively manage the our sparsely populated northern lands, the law of Koskematon was proclaimed. It allowed for rich nobles to buy large swaths of land with the local population to serve under them. This proved to be a great success by not only removing some of the administrative burden from the crown, but also encouraging landowners to try to increase profit from the land."
  idea_grand_sotajoukko: "Grand Sotajoukko"
@@ -93,7 +93,7 @@
  maalopp_uusadma: "Uusadma"
  maalopp_uusadma_desc: "After disastrous floods of the early 1300s, new ports had to be build in order to restore the economy of the region. The most important of those was the town of Uusadma which serves its purpose to this day."
  maalopp_cutting_edge_fortifications: "Cutting Edge Fortifications"
- maalopp_cutting_edge_fortifications_desc: "Connections with the west were always a boon to our people. Taedian merchants wanted our cities to thrive to increase their own income, so they brought new technologies with them."
+ maalopp_cutting_edge_fortifications_desc: "Connections with the west were always a boon to our people. Mysentrian merchants wanted our cities to thrive to increase their own income, so they brought new technologies with them."
  maalopp_liemarian_harbor: "Liemarian Harbor"
  maalopp_liemarian_harbor_desc: "While most of Pohjoismaa didn't convert to Liemarianism following the wave of missionaries, we embraced this religions as a sign of unity with the friends across the sea, leading to many Tummic Liemarians settling in our borders."
  maalopp_embracing_deforestation: "Embracing Deforestation"
