--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -10,7 +10,7 @@
  SILVESTRINE_silvestrine_infantry: "Silvestrine Infantry"
  SILVESTRINE_silvestrine_infantry_desc: "Due to many mercenary bands across our lands, advanced infantry techniques have been develop to make the best use of armored men. Most common type is a silvestrine spearmen. They can hold of attacks of even the strongest cavalries in the world - many of them fought during the Battle of Matliman."
  SILVESTRINE_interconnected_empire: "Interconnected Empire"
- SILVESTRINE_interconnected_empire_desc: "Lands of Silvestria lie in the middle of not only the Saelian Empire, but also Taedium as a whole. Subsequently, many people from different origins and nations travel across this land and we profiteer from this."
+ SILVESTRINE_interconnected_empire_desc: "Lands of Silvestria lie in the middle of not only the Saelian Empire, but also Mysentria as a whole. Subsequently, many people from different origins and nations travel across this land and we profiteer from this."
  SILVESTRINE_hierarchia_dei: "Hierarchia Dei"
  SILVESTRINE_hierarchia_dei_desc: "Hierarchia Dei, meaning 'God's hierarchy', is the term to describe the ideal order in the world, in which everyone has a strict place in the system. It is mostly used as a way to enforce feudal hierarchy and monarch's rule over peasantry."
  SILVESTRINE_many_states_of_silvestria: "Many States of Silvestria"
@@ -95,7 +95,7 @@
  middle_magreiner_homeland_protection: "Homeland Protection"
  middle_magreiner_homeland_protection_desc: "People of these lands wish for their prosperity to remain unscathered without a fight, but even they know they will have to protect it - even if they have to risk their own lifes."
  middle_magreiner_saelian_tetrarichy_connections: "Connections with the Tetrarchy"
- middle_magreiner_saelian_tetrarichy_connections_desc: "Nordkirche is often seen as the most prestigious and powerful of the four electors due to the most recent land grants and overall influence they have over the northern parts of Taedium, which greatly influences the prestige of the region by proxy."
+ middle_magreiner_saelian_tetrarichy_connections_desc: "Nordkirche is often seen as the most prestigious and powerful of the four electors due to the most recent land grants and overall influence they have over the northern parts of Mysentria, which greatly influences the prestige of the region by proxy."
  middle_magreiner_expanded_royal_court: "Expanded Royal Court"
  middle_magreiner_expanded_royal_court_desc: "Influx of gold and silver from selling grain encourages the low and medium nobility to increase the size of their personal courts to show other rulers who is the richest and most powerful."
  middle_magreiner_refined_artillery_craft: "Refiner Artillery Craft"
@@ -214,12 +214,12 @@
  snaiwatzer_peasant_influences: "Peasant Influences"
  snaiwatzer_peasant_influences_desc: "Stories of liberal republics in the south has sparked a dream of a democratic state, especially in lower social classes. They have worked hard to help us realize this, and with many revolutionary ideas from the south accelerating the societal reforms within our country, we might as well listen to them."
  snaiwatzer_high_altitude_defenses: "High Altitude Defenses"
- snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Taedium."
+ snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Mysentria."
  snaiwatzer_mountain_folk: "Mountain Folk"
  snaiwatzer_mountain_folk_desc: "Long time have passed since our Zbojaner ancestors came here, and in effect, we aren't truly only Zbojaner, or Silvestrine, we are a mix of both, and that what makes us, Snaiwatzer people, unique, and our nobility prides itself in it."
  snaiwatzer_new_imperial_mint: "New Imperial Mint"
  snaiwatzer_new_imperial_mint_desc: "When the Imperial Mint of Limburg depleted, the emperor established a new mint in our lands, in the very heart of it, between the Cacumudian mountain range, in Grobhalde, and after years of running it, we have learned many lessons on managing a mint."
  snaiwatzer_improved_gunmaking: "Improved Gunmaking"
- snaiwatzer_improved_gunmaking_desc: "Our iron and steel being one of the best in the entire Silvestria, or maybe even entire Taedium, and with echoes of gunpowder warfare getting into our court, we have started to improve our gunmaking, creating one of the most durable guns in our century."
+ snaiwatzer_improved_gunmaking_desc: "Our iron and steel being one of the best in the entire Silvestria, or maybe even entire Mysentria, and with echoes of gunpowder warfare getting into our court, we have started to improve our gunmaking, creating one of the most durable guns in our century."
  snaiwatzer_reformed_lawmaking: "Reformed Lawmaking"
  snaiwatzer_reformed_lawmaking_desc: "With relative peace that Cacumuds provided to our lands from the south, and avoiding many wars that have plagued the imperial lands to the north, we had started investing our time into lawmaking more than warfare, and with southern ideas still alive in our country, we created one of more refined law codex in the history of Silvestria."
