--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -140,7 +140,7 @@
  raxasam_town_guards: "Town Guards"
  raxasam_town_guards_desc: "The cities of Raxasa are the most vital to our economy, and so it became a common practice to train village folk as guardsmen, so that we don't deplete vital city population and grant the commoners a chance to protect their nation."
  raxasam_supreme_clothing: "Supreme Clothing"
- raxasam_supreme_clothing_desc: "Cities surrounding the Anjafrah are often collectively referred to as 'the silk cities' due to the high quality clothing produced there. They are sought after commodities, even in distant lands such as Taedium or Maisetra"
+ raxasam_supreme_clothing_desc: "Cities surrounding the Anjafrah are often collectively referred to as 'the silk cities' due to the high quality clothing produced there. They are sought after commodities, even in distant lands such as Mysentria or Maisetra"
  raxasam_sunbat_enterprise: "Sunbat Enterprise"
  raxasam_sunbat_enterprise_desc: "Goods from the steppe and the far east often come through north dominated by the hestani folk. Thankfully, many of our towns have their sister cities in the Sunbat coast to much more effectively trade and not interfere with each other."
  raxasam_uniting_the_cities: "Uniting the Cities"
