--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -103,5 +103,5 @@
  tonatitlan_new_world_splendor_desc: "When easterners came to our land, they were in awe of what we have created. They especially liked the glittering golden and obsidian frames which decorate our buildings and silver jewelry our women wear. Every time a new merchant visits our ports, they immediately wish they could control these prosperous lands."
  tonatitlan_lummak_merits: "Lummak Merits"
  tonatitlan_lummak_merits_desc: "People of the Lummak forest often avoid interacting with us, mostly focusing on diplomacy and trade between themselves or the far south. Despite this, many of their bright minds live at our courts and serve the sun empire."
- tonatitlan_taedian_merchants: "Taedian Merchants"
- tonatitlan_taedian_merchants_desc: "The merchants from a distant continent of Taedium often visit our ports, wanting to not only to trade, but also learn about our people, our land and resources. They travel our long roads. Our court beliefs that they will lead us to global glory and nothing bad will ever come out of it."
+ tonatitlan_taedian_merchants: "Mysentrian Merchants"
+ tonatitlan_taedian_merchants_desc: "The merchants from a distant continent of Mysentria often visit our ports, wanting to not only to trade, but also learn about our people, our land and resources. They travel our long roads. Our court beliefs that they will lead us to global glory and nothing bad will ever come out of it."
