--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -50,7 +50,7 @@
  indrigerland_nation_desc: "Unite Indrigerland to direct our focus for greater prosperity for all."
 
  ueyaltepatl_nation_title: "Become the Great State @UEY"
- ueyaltepatl_nation_desc: "Xamanehi ambitions grow bigger and bigger, year by year. Taedian technology allows us to finally achieve the dream of defeating Tonatitlan and claiming this title for ourselves."
+ ueyaltepatl_nation_desc: "Xamanehi ambitions grow bigger and bigger, year by year. Mysentrian technology allows us to finally achieve the dream of defeating Tonatitlan and claiming this title for ourselves."
 
  visparaya_nation_title: "Unite Visparaya @VIP"
  visparaya_nation_desc: ""
