--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -212,7 +212,7 @@
  gen_hre_financial_centre_title: "A Center of Commerce"
  gen_hre_financial_centre_desc: "We must fashion [Root.Capital.GetCapitalName] into a center of all manner of commercial activities so that the most talented and wealthiest burghers from across Silvestria choose to settle in our city."
  gen_hre_republic_reform_government_title: "Reform the Administration"
- gen_hre_republic_reform_government_desc: "We must take up new ways and reform our administration into a modern [Root.GovernmentName] if it is to survive the changes sweeping across Taedium."
+ gen_hre_republic_reform_government_desc: "We must take up new ways and reform our administration into a modern [Root.GovernmentName] if it is to survive the changes sweeping across Mysentria."
  any_previous_military_mission_complete_tt: "Has completed final military mission"
  any_previous_economic_mission_complete_tt: "Has completed final economic mission"
  td_missions.1.t: "Military Future of [Root.GetName]"
