--- a/localisation/TD_03_missions_saelian_l_english.yml
+++ b/localisation/TD_03_missions_saelian_l_english.yml
@@ -14,7 +14,7 @@
 
  generic_expand_the_realm_title: "Expand the Realm"
  generic_expand_the_realm_desc: ""
- generic_expand_the_realm_tt: "Gain permanent claim on every heretic province in the world and every heathen province in Taedium."
+ generic_expand_the_realm_tt: "Gain permanent claim on every heretic province in the world and every heathen province in Mysentria."
  TD_emperor_zealous_conquest: "Zealous Conquest"
 
  generic_subdue_tetrarchy_title: "Subdue Tetrarchy"
