--- a/localisation/TD_ages_l_english.yml
+++ b/localisation/TD_ages_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  age_of_discovery_short: "Innovations"
  age_of_discovery: "Age of Innovations"
- age_of_discovery_desc: "Turmoil in Kakigia and Taedium echoes throughout the world. With piracy and banditry at all time high a need to find new trade routes arises. Innovations spreads quickly in many ways and forms - from social philosophy to warfare."
+ age_of_discovery_desc: "Turmoil in Kakigia and Mysentria echoes throughout the world. With piracy and banditry at all time high a need to find new trade routes arises. Innovations spreads quickly in many ways and forms - from social philosophy to warfare."
  obj_many_subjects: "Many Subjects"
  obj_many_subjects_desc: "Have at least 4 subjects or be the Emperor of the Saelian Empire"
  obj_ahead_tech: "Innovative Nation"
@@ -16,7 +16,7 @@
 
  age_of_reformation_short: "Reformation"
  age_of_reformation: "Age of Reformation"
- age_of_reformation_desc: "As the Taedian nations grow tired of archaic imperial regime, new belief is slowly rising in the continent, all while old world and chantlian civilisations slowly learn to adapt to the integrate."
+ age_of_reformation_desc: "As the Mysentrian nations grow tired of archaic imperial regime, new belief is slowly rising in the continent, all while old world and chantlian civilisations slowly learn to adapt to the integrate."
  TD_ab_northern_frontier: "The Northern Frontier"
  TD_ab_northern_frontier_tt: "Has 'The Northern Frontier' unlocked"
 
