--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- northern_taedium_superregion: "Northern Taedium"
- southern_taedium_superregion: "Southern Taedium"
+ northern_mysentria_superregion: "Northern Mysentria"
+ southern_mysentria_superregion: "Southern Mysentria"
  pohjoismaa_superregion: "Pohjoismaa"
  wasichantlia_superregion: "Wasichantlia"
  northern_basin_superregion: "Northern Basin"
