--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -18,11 +18,11 @@
  LOADING_TIP_16: "Panpallpa means 'Flatlands' in Maquchan language."
  LOADING_TIP_17: "Grafoulan monk Liemar was not the first to attempt reforming the Saelian Church, but he surely was the most successful."
  LOADING_TIP_18: "Saelius died from trichinosis."
- LOADING_TIP_19: "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Taedium."
+ LOADING_TIP_19: "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Mysentria."
  LOADING_TIP_20: "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit Ilkeä."
  LOADING_TIP_21: "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
  LOADING_TIP_22: "After the fall of the Bunelisuli Empire the throne was usurped by the two younger brothers of the legitimate khan - Markörgis Ariunuulyn."
- LOADING_TIP_23: "The Hengtuan nations widely embraced gunpowder warfare much earlier than Taedium, but it was the west that perfected the technology."
+ LOADING_TIP_23: "The Hengtuan nations widely embraced gunpowder warfare much earlier than Mysentria, but it was the west that perfected the technology."
  LOADING_TIP_24: "Cities of Lameng were established after mass exodus of people trying to flee from Huangche autocrats."
  LOADING_TIP_25: "Empire of Paradevari protected Samadia from tribal raids for most of its history - up until Bunelisuli invasion."
  LOADING_TIP_26: "People of Šarikullu control the most important trade routes in North Sahila, allowing them to indirectly influence many countries."
