--- a/localisation/TD_01_flavour_bohemia_l_english.yml
+++ b/localisation/TD_01_flavour_bohemia_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  td_bohemia.1.t: "Deposition of king Pepik"
- td_bohemia.1.desc: "The king is known to be a mad person, often demanding impossible to complete requests only to get bored after they are completed. Recently, he has made a claim that entire nation of bohemia comes from a parallel universe where our continent of taedium is called 'Europe', the Saelian Empire is called 'Holy Roman Empire' and Kriegerstein is actually called 'Oustria'. He is so sure of his theory, than he now seeks a way to 'return home' and is becoming increasingly dangerous for himself and the entire kingdom. How shall we proceed?"
+ td_bohemia.1.desc: "The king is known to be a mad person, often demanding impossible to complete requests only to get bored after they are completed. Recently, he has made a claim that entire nation of bohemia comes from a parallel universe where our continent of mysentria is called 'Europe', the Saelian Empire is called 'Holy Roman Empire' and Kriegerstein is actually called 'Oustria'. He is so sure of his theory, than he now seeks a way to 'return home' and is becoming increasingly dangerous for himself and the entire kingdom. How shall we proceed?"
  td_bohemia.1.a: "His son will take his place."
  td_bohemia.1.b: "If king says it's true, then it MUST be true!"
 
