--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -52,7 +52,7 @@
  samadia_land_of_temples: "Land of Temples"
  samadia_land_of_temples_desc: "Some temples in Samadia are older than many dynasties, cities and states. They serve not only spiritual function, but are often centers of the community and seats of local power."
  samadia_welcome_the_taedians: "Welcome to Taedians"
- samadia_welcome_the_taedians_desc: "Taedian merchants gladly buy our products even at increased prices, which greatly benefits not only our merchants, but also the production sector - farmers, weavers, glassmakers and plantation owners."
+ samadia_welcome_the_taedians_desc: "Mysentrian merchants gladly buy our products even at increased prices, which greatly benefits not only our merchants, but also the production sector - farmers, weavers, glassmakers and plantation owners."
  samadia_sahiranika: "Sahiranika"
  samadia_sahiranika_desc: "Increased wealth and rising demand for processed produce, many of the rural folk started emigrating to cities where they hope to find even more success."
  samadia_reformed_vibagha_system: "Reformed Vibagha System"
