--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -711,7 +711,7 @@
  PLAYER_AI_PREFS_OPTION_DESC_timeout: "When the time is out, the AI settings will be set back to default."
  PLAYER_AI_PREFS_TIMEOUT_NEVER: "Never"
  DEFAULT: "Default"
- ACHIEVEMENTS_DISABLED_BECAUSE: "Achievements are disabled because:\n§Y- Taedium is a world of endless I M A G I N A T I O N. Go and do whatever you want.§!\n"
+ ACHIEVEMENTS_DISABLED_BECAUSE: "Achievements are disabled because:\n§Y- TMysentriais a world of endless I M A G I N A T I O N. Go and do whatever you want.§!\n"
  ACHIEVEMENTS_DISABLED_MODIFIED_SAVE: "§Y- Either you are offline or the savegame belongs to another user, is edited or saved with incompatible DLCs.§!"
  ACHIEVEMENTS_DISABLED_MODIFIED_GAME: "§Y- EU4 is running a mod or is altered in other ways.§!"
  ACHIEVEMENTS_DISABLED_WRONG_PLAYER: "§Y- This game is meant to be played as $COUNTRY$.§!"
